--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.3",
+    "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/react": "^2.3.6",
+    "@types/js-cookie": "^3.0.6",
+    "cookies": "^0.9.1",
+    "framer-motion": "^11.1.7",
+    "graphql": "^16.8.1",
+    "js-cookie": "^3.0.5",
+    "next": "14.2.3",
+    "next-cookies": "^2.0.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.2.1",
+    "zod": "^3.23.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
