--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@apollo/client": "^3.10.3",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.3.6",
+    "@prisma/client": "^5.13.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
+    "bcrypt": "^5.1.1",
+    "bcrypt-ts": "^5.0.2",
     "cookies": "^0.9.1",
     "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-cookies": "^2.0.3",
     "next-themes": "^0.3.0",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
